--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" href="style.css">
+<head><link rel="stylesheet" href="style.css"><meta name="google-site-verification" content="KJgHzoVEEPSqRcQyQWDKBxEDnveh3qTos3iMAYkXVew" />
 <title>Color Test</title>
 </head>
 <body>
